<resources>
    <string name="app_name">Get Sign</string>
    <string name="main_title_welcome">WELCOME</string>
    <string name="main_title_text">Press the Button and Connect to Server</string>
    <string name="fail_title">EMMM…</string>
    <string name="fail_text">We failed to connect\nPlease try again</string>
    <string name="fail_camera">We failed to open camera\nPlease try again</string>
    <string name="start_title">^_^</string>
    <string name="start_text">Connected successfully\nTest Sending or Begin</string>
    <string name="button_main">CONNECT</string>
    <string name="button_fail_page">BACK</string>
    <string name="button_start_try">TEST</string>
    <string name="counter">SENT</string>
    <string name="button_start">START</string>
    <string name="copyright">Version0.1.0\n+_+\nand group members</string>
    <string name="image_none">NONE Image Now</string>
    <string name="button_quit">QUIT</string>
</resources>
